--- a/src/Pages/Footer/Footer.css
+++ b/src/Pages/Footer/Footer.css
@@ -2,4 +2,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    background-color: gray;
+    height: 50vh;
+    width: 100%
+}
+
+.social-icons {
+    padding: 10px;
+    font-size: 40px;
+}
+
+.social-icons a {
+    margin:20px;
 }
