--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -14,4 +19,9 @@ code {
 .carousel-item img{
   height: 550px;
   object-fit: cover;
+}
+
+.navbar li>.active {
+  font-weight: bold;
+  color: tomato
 }
