--- a/src/Pages/Reviews/Reviews.css
+++ b/src/Pages/Reviews/Reviews.css
@@ -1,6 +1,18 @@
 .reviews{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    margin: 20px auto;
+    gap: 10px;
+}
+
+@media only screen and (max-width: 576px) {
+    .reviews{
+        grid-template-columns: repeat(1, 1fr);
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 992px) {
+    .reviews{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
